hphp/hack/test/typecheck/shape/key_exists_refines_bad1.php.exp
File "key_exists_refines_bad1.php", line 7, characters 19-38:
Invalid argument (Typing[4110])
File "key_exists_refines_bad1.php", line 3, characters 24-29:
This is a string
File "key_exists_refines_bad1.php", line 5, characters 29-31:
It is incompatible with an int
